# MVC-like-actix

./: Cargo.toml
migrations/2022-03-11-144414_users/: up.sql
src/: lib.rs  main.rs  routes.rs  util.rs
src/controllers/: create_user.rs  index.rs  mod.rs
src/models/: users.rs
